k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale
  namespace: connectivity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headscale
  template:
    metadata:
      labels:
        app: headscale
    spec:
      securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          fsGroup: 1000
      containers:
      - name: headscale
        image: headscale/headscale:latest
        command: ["headscale", "serve"]
        ports:
        - containerPort: 8080
        - containerPort: 3478
          protocol: UDP
        volumeMounts:
        - name: config-file
          mountPath: /etc/headscale/config.yaml
          subPath: config.yaml
        - name: persistent-data
          mountPath: /var/lib/headscale # Donde headscale escribirá llaves y DB
      volumes:
      - name: config-file
        configMap:
          name: headscale-config
      - name: persistent-data
        hostPath:
          # APUNTANDO A TU LVM DE CONFIGURACIÓN
          path: /mnt/data/config/headscale 
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: headscale-service
  namespace: connectivity
spec:
  selector:
    app: headscale
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: stun
    port: 3478
    protocol: UDP
    targetPort: 3478
  type: LoadBalancer
