k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale-ingress
  namespace: connectivity
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - headscale.cdo.local
    secretName: oso-cloud-cert
  rules:
  - host: headscale.cdo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headscale-service
            port:
              number: 8080
